re PR debug/41679 (internal compiler error: in loc_cmp, at var-tracking.c:2433)

PR debug/41679
	* var-tracking.c (add_stores): Avoid value mode mismatch for
	promoted declarations.

	* gcc.target/arm/pr41679.c: New.

From-SVN: r155322